--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
 </head>
 
 <body>
-
+<audio autoplay loop controls>
+  <source src="fireboy-need-you.mp3" type="audio/mpeg" />
+  Your browser does not support the audio element.
+</audio>
   <!-- Background particles -->
   <script>
     for (let i = 0; i < 35; i++) {
