--- a/index.html
+++ b/index.html
@@ -108,10 +108,15 @@
 </head>
 
 <body>
-<audio autoplay loop controls>
-  <source src="fireboy-need-you.mp3" type="audio/mpeg" />
-  Your browser does not support the audio element.
-</audio>
+  <!-- Music Controls -->
+    <div class="music-controls">
+        <button onclick="toggleMusic()">🎵 Play/Pause Music</button>
+    </div>
+
+    <audio id="bg-music" loop>
+        <source src="fireboy-need-you.mp3" type="audio/mp3">
+        Your browser does not support the audio tag.
+    </audio>
   <!-- Background particles -->
   <script>
     for (let i = 0; i < 35; i++) {
