--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@
     function showMessage() {
       document.getElementById('message').style.display = 'block';
     }
+      let music = document.getElementById("bg-music");
+
+        function toggleMusic() {
+            if (music.paused) {
+                music.play();
+            } else {
+                music.pause();
+            }
   </script>
 
 </body>
